--- a/html/SecondScript.html
+++ b/html/SecondScript.html
@@ -11,8 +11,9 @@
         <main>
             <section>
                 <article>
-                    <button id="firstBtn">버튼1</button>
-                    <button id="secondBtn">버튼2</button>
+                    <button id="firstBtn">첫번째 버튼</button>
+                    <button id="secondBtn">두번째 버튼</button>
+                    <input id="dpIpt" type="text" value="입력값">
                 </article>
             </section>
         </main>
