--- a/html/SecondScript.html
+++ b/html/SecondScript.html
@@ -13,6 +13,7 @@
                 <article>
                     <button id="firstBtn">첫번째 버튼</button>
                     <button id="secondBtn">두번째 버튼</button>
+                    <button id="thirdBtn">세번째 버튼</button>
                     <input id="dpIpt" type="text" value="입력값">
                 </article>
             </section>
