--- a/html/ThirdScript.html
+++ b/html/ThirdScript.html
@@ -1,1 +1,8 @@
-<script src="thirdScript.js"></script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <script src="thirdScript.js"></script>
+    </head>
+    <body>
+    </body>
+</html>
