--- a/html/614Final.html
+++ b/html/614Final.html
@@ -6,6 +6,7 @@
             .container {
                 background-color: coral;
                 border-radius: 5%;
+                padding: 10px;
             }
             .container > div.btnDiv {
                 background-color: ivory;
