--- a/html/Selector.html
+++ b/html/Selector.html
@@ -3,6 +3,7 @@
     <head>
         <title>선택자</title>
         <link rel="stylesheet" href="selector.css">
+        <script src="selector.js"></script>
     </head>
     <body>
         <header>
@@ -15,6 +16,20 @@
                     <div class="content">
                         <p>동해물과 백두산이 마르고 닳도록</p>
                         <p>SW 개발 전문가 과정 시간표</p>
+                    </div>
+                </article>
+                <article class="container">
+                    <h5 class="header">유명 배우 이름</h5>
+                    <div class="content">
+                        <ol>
+                            <li>송강호</li>
+                            <li>황정민</li>
+                            <li>이정재</li>
+                            <li>윤여정</li>
+                            <li>최우식</li>
+                            <li>최민식</li>
+                        </ol>
+                        <input id="dpIpt" type="text" value="">
                     </div>
                 </article>
             </section>
