--- a/html/Selector.html
+++ b/html/Selector.html
@@ -30,6 +30,7 @@
                             <li>최민식</li>
                         </ol>
                         <input id="dpIpt" type="text" value="">
+                        <button id="incrementBtn">증가</button>
                     </div>
                 </article>
             </section>
