--- a/html/counters.html
+++ b/html/counters.html
@@ -13,6 +13,7 @@
                 background-color: skyblue;
             }
         </style>
+        <script src="counters.js"></script>
     </head>
     <body>
         <div id="container">
