--- a/html/counters.html
+++ b/html/counters.html
@@ -33,6 +33,15 @@
                 <input type="button" value="+" id="addBtn">
                 <input type="button" value="-" id="subtractBtn">
             </div>
+        </div>
+        <div id="">
+            <div>
+                <input type="text" id="dispIpt" placeholder="초기값">
+            </div>
+            <div>
+                <input type="button" value="+" id="plusBtn">
+                <input type="button" value="-" id="minusBtn">
+            </div>
         </div>        
     </body>
 </html>
