--- a/html/form.html
+++ b/html/form.html
@@ -31,7 +31,7 @@
     <body>
         <!-- form 태그 내부의 input, select 태그는 서버로 전송이 됨 -->
         <div class="container">
-            <form action="http://localhost:3000/register.do" method="post">
+            <form action="http://localhost:3000/register" method="post">
                 <label>이름</label>
                 <input data-label="이름" name="userName" type="text">
                 <br>
