--- a/nodejs/simple-server/form.html
+++ b/nodejs/simple-server/form.html
@@ -70,7 +70,7 @@
         <p>Please fill in this form to create an account.</p>
         <hr>
         <div class="container">
-            <form action="http://localhost:3000/register" method="post">
+            <form action="/register" method="post">
                 <label>이름</label>
                 <input data-label="이름" name="userName" type="text" required>
                 <br>
@@ -114,7 +114,7 @@
                 var xmlHttp = new XMLHttpRequest();       // XMLHttpRequest 객체를 생성함.
                 xmlHttp.onreadystatechange = function() { // onreadystatechange 이벤트 핸들러를 작성함.
                     // 서버상에 문서가 존재하고 요청한 데이터의 처리가 완료되어 응답할 준비가 완료되었을 때
-                    if(this.status == 200 && this.readyState == this.DONE) {
+                    if(this.status == 200 && this.readyState == XMLHttpRequest.DONE) {
                         // 요청한 데이터를 문자열로 반환함.
                         const result = JSON.parse(xmlHttp.responseText);
                         const ulObj = document.getElementById("listUl");
