--- a/html/swap.html
+++ b/html/swap.html
@@ -35,5 +35,20 @@
                 </select>                
             </div>            
         </div>
+        <div class="grid-container">
+            <div class="grid-item">
+                <select id="lSelect" multiple>
+                </select>
+            </div>
+            <div class="grid-item">
+                <input type="button" id="rightBtn" value="&gt;&gt;">
+                <br>
+                <input type="button" id="leftBtn" value="&lt;&lt;">
+            </div>
+            <div class="grid-item">
+                <select id="rSelect" multiple>
+                </select>                
+            </div>            
+        </div>
     </body>
 </html>
