--- a/html/DomTraversal3-2.html
+++ b/html/DomTraversal3-2.html
@@ -13,6 +13,10 @@
                 }
                 // 버튼 클릭 이벤트 헨들러
                 // DOM 객체의 이벤트 헨들러의 레퍼런스로 사용된 함수 내부의 this는 이벤트가 발생한 DOM 객체
+                // 함수 내부에 함수가 선언되고, 외부 함수의 식별자 정보를 사용하고 내부 함수의 레퍼런스가 참조 되어 질 때
+                // 외부 함수의 식별자 정보가 유지되는 현상 closure
+                // handler.[[scope]] <= 현재 실행되고 있는 외부 함수의 EC
+                // handler 함수가 실행 될 때 EC에 outer reference <= handler.[[scope]]
                 function handler(){
                     var text = this.innerText;
                     for(var i=0; i<inputList.length; i++){
