--- a/html/TableWithEvent.html
+++ b/html/TableWithEvent.html
@@ -18,6 +18,7 @@
                 background-color: rgb(218, 97, 97);
             }
         </style>
+        <script src="tableWithEvent.js" defer></script>
     </head>
     <body>
         <header>
@@ -66,6 +67,8 @@
                         </tr>
                     </tbody>
                 </table>
+                <input id="answerIpt" type="text" placeholder="여기에 값을 입력하세요">
+                <button id="searchBtn">정답을찾자!</button>
             </article>
         </section>
     </body>
