--- a/html/TableWithEvent.html
+++ b/html/TableWithEvent.html
@@ -8,6 +8,8 @@
             }
             article.contents > table.numberTable {
                 width: 60%;
+                margin-left:auto; 
+                margin-right:auto;
             }
             article.contents > table.numberTable th, article.contents > table.numberTable td {
                 background-color: lightgrey;
@@ -15,7 +17,7 @@
             }
 
             article.contents > table.numberTable td.bingo {
-                background-color: rgb(218, 97, 97);
+                background: linear-gradient(to right, blue, pink);
             }
         </style>
         <script src="tableWithEvent.js" defer></script>
@@ -63,7 +65,7 @@
                             <td>17</td>
                             <td>18</td>
                             <td>19</td>
-                            <td>20</td>
+                            <td>1</td>
                         </tr>
                     </tbody>
                 </table>
