--- a/html/TableWithEvent.html
+++ b/html/TableWithEvent.html
@@ -17,7 +17,14 @@
             }
 
             article.contents > table.numberTable td.bingo {
-                background: linear-gradient(to right, blue, pink);
+                /* background: linear-gradient(to right, blue, pink); */
+                animation-name: example;
+                animation-duration: 3s;
+                animation-iteration-count: infinite;
+            }
+            @keyframes example {
+                from {background-color: red;}
+                to {background-color: yellow;}
             }
         </style>
         <script src="tableWithEvent.js" defer></script>
