--- a/html/TableWithEvent.html
+++ b/html/TableWithEvent.html
@@ -78,6 +78,8 @@
                 </table>
                 <input id="answerIpt" type="text" placeholder="여기에 값을 입력하세요">
                 <button id="searchBtn">정답을찾자!</button>
+                <button id="randomBtn">숫자를바꾸자!</button>
+                <button id="initBtn">클래스를빼자</button>
             </article>
         </section>
     </body>
