--- a/html/jQuery/SecondJQ.html
+++ b/html/jQuery/SecondJQ.html
@@ -10,7 +10,10 @@
                 width: 100%;
             }
             .mainContents {
-                color: darkcyan;
+                background-color: azure;
+            }
+            .mainContentsHover {
+                color: rgb(203, 102, 156);
             }
         </style>
     </head>
