--- a/html/jQuery/SecondJQ.html
+++ b/html/jQuery/SecondJQ.html
@@ -21,7 +21,8 @@
         <header>
             <h3>jQuery 연습하기!!!</h3>
         </header>
-        <nav></nav>
+        <nav>
+        </nav>
         <main>
             <section class="contents">
                 <article>
@@ -56,6 +57,17 @@
                         
                         나는 나에게 작은 손을 내밀어
                         눈물과 위안으로 잡는 최초의 악수.</pre>
+                        <div>
+                            <button class="contentsBtn">1</button>
+                            <button class="contentsBtn">2</button>
+                            <ul class="menuItems">
+                                <li>tea</li>
+                                <li>milk</li>
+                                <li>hello</li>
+                            </ul>
+                            <ul class="targetItems">
+                            </ul>
+                        </div>
                 </article>
             </section>
         </main>
