--- a/nodejs/simple-server/ajax.html
+++ b/nodejs/simple-server/ajax.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="jquery-3.6.0.js"></script>
+        <script src="node_modules/jquery/dist/jquery.js"></script>
         <script>
             $(function(){
                 $("#singerBtn").on("click", function(){
